1999-02-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amlabel.c: compiler warning: too many arguments for format

1999-02-13  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amlabel.c: remove the label from the tapefile in
	case it was already there (-f).

1999-02-13  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c: make sure holding files are not larger
	that chunksize.

1999-02-13  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amcleanupdisk.c: new program to scan and find temporary
	file on holding disks.
	* server-src/Makefile.am (libexec_PROGRAMS): add amcleanupdisk.
	* server-src/amcleanup.sh.in: call amcleanupdisk.

1999-02-13  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/holding.c (pick_all_datestamp): new function to return
	all datestamp in the holding disks.
	* server-src/holding.h: declare pick_all_datestamp.

1999-02-13  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/diskfile.h (host_t): new start_t field.
	* server-src/diskfile.c (read_diskline): set start_t to 0.
	* server-src/driver.c (start_some_dumps): Don't start a dump if 
	the host->start_t > now.
	* server-src/driver.c (start_some_dumps): set host->start_t to 15 sec 
	in the future when starting a FILE_DUMP.
	* server-src/driver.c (dump_to_tape): set host->start_t to 15 sec in 
	the future when starting a PORT_DUMP.

1999-02-12  Thomas Hepper <th@ant.han.de>
	* changer-src/Makefile.am added tape-src to the include list
	* changer-src/chg-scsi.c removed the changes for not using the
	statfile.
	* changer-src/scsi-aix.c Added debug output in SCSI_ExecuteCommand
	added size parameter to the SCSI_Inquiry call
	* changer-src/scsi-bsd.c added size parameter to the SCSI_Inquiry call
	* changer-src/scsi-hpux_new.c same as above 
	* changer-src/scsi-irix.c same as above
	* changer-src/scsi-solaris.c same as above
	* changer-src/scsi-linux swich from ioctl interface to sg interface.