@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: holding.h,v 1.11.2.4 1999/02/13 21:11:22 martinea Exp $
+ * $Id: holding.h,v 1.11.2.5 1999/02/14 15:26:34 martinea Exp $
  *
  */
 
@@ -55,6 +55,7 @@ filetype_t get_amanda_names P((char *fname,
 			       char **hostname,
 			       char **diskname,
 			       int *level));
+void get_dumpfile P((char *fname, dumpfile_t *file));
 long size_holding_files P((char *holding_file));
 int unlink_holding_files P((char *holding_file));
 int rename_tmp_holding P((char *holding_file, int complete));
